# sputnik

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: docker.yml
cmake/: Dependencies.cmake
cmake/modules/: FindGlog.cmake
sputnik/: CMakeLists.txt  barrier.h  common.h  cuda_utils.h  dlmc.cc  dlmc.h  load_store.h  matrix_utils.cu.cc  matrix_utils.h  sputnik.h  type_utils.h
sputnik/depthwise/: cuda_depthwise.cu.cc  cuda_depthwise.h  depthwise_benchmark.cu.cc  depthwise_test.cu.cc  input_tile.h  shape_utils.h  width_padding.h
sputnik/sddmm/: CMakeLists.txt  cuda_sddmm.cu.cc  cuda_sddmm.h  dlmc_benchmark.cu.cc  sddmm_benchmark.cu.cc  sddmm_test.cu.cc
sputnik/softmax/: softmax.cu.cc  sparse_softmax.cu.cc
sputnik/spmm/: CMakeLists.txt  cuda_spmm.cu.cc  cuda_spmm.h  dlmc_benchmark.cu.cc  sparse_tile.h  spmm_benchmark.cu.cc  spmm_test.cu.cc
